--- a/My solutions sqlzoo.net.ipynb
+++ b/My solutions sqlzoo.net.ipynb
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c79fb4b",
+   "id": "c937d7a2",
    "metadata": {},
    "source": [
     "### SELF join"
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78d674af",
+   "id": "3339e03e",
    "metadata": {},
    "source": [
     "1.\n",
@@ -1170,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46604e05",
+   "id": "859c8140",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a28dbba8",
+   "id": "c1d87f35",
    "metadata": {},
    "source": [
     "2.\n",
@@ -1190,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1dc23ea",
+   "id": "610262e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4515a1e0",
+   "id": "af04ee76",
    "metadata": {},
    "source": [
     "3.\n",
@@ -1211,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56919b35",
+   "id": "efce96c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3826c0fc",
+   "id": "9b9ffcc2",
    "metadata": {},
    "source": [
     "Routes and stops\n",
@@ -1235,7 +1235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f3befef",
+   "id": "56f2f639",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e64d1583",
+   "id": "3cb02037",
    "metadata": {},
    "source": [
     "5.\n",
@@ -1257,7 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5af42af4",
+   "id": "3f230e45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d42dd05c",
+   "id": "b899b06a",
    "metadata": {},
    "source": [
     "6.\n",
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bf777e6",
+   "id": "f7f12a33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,7 +1293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7b6e6eb",
+   "id": "59f42dee",
    "metadata": {},
    "source": [
     "7.\n",
@@ -1303,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc138649",
+   "id": "16f95858",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90253ad8",
+   "id": "eed0c0b3",
    "metadata": {},
    "source": [
     "8.\n",
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "399d69ca",
+   "id": "e0e33fc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb2bc4a3",
+   "id": "f475209a",
    "metadata": {},
    "source": [
     "9.\n",
@@ -1349,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9552d6b1",
+   "id": "172f9862",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9eed19af",
+   "id": "2530a263",
    "metadata": {},
    "source": [
     "10.\n",
@@ -1374,7 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fad26796",
+   "id": "69f20336",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,6 +1397,29 @@
     "\n",
     "ON (first.name = second.name)\n",
     "ORDER BY first.num, first.name, second.num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "80c80270",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 4)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [(1,2,3), (2,3,4)]\n",
+    "y = sorted(x,key = lambda x: x[2], reverse = True)[0]\n",
+    "y"
    ]
   }
  ],
