--- a/CodeAcademy.ipynb
+++ b/CodeAcademy.ipynb
@@ -206,12 +206,13 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3cbaa66f",
+   "cell_type": "markdown",
+   "id": "8d6d1a53",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Create a Table\n",
+    "In this project, you will create your own friends table and add/delete data from it!"
+   ]
   },
   {
    "cell_type": "code",
@@ -219,7 +220,39 @@
    "id": "f638ebb3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "CREATE TABLE friends(\n",
+    "  id INTEGER,\n",
+    "  name TEXT,\n",
+    "  birthday DATE\n",
+    ");\n",
+    "\n",
+    "INSERT INTO friends(id, name, birthday)\n",
+    "VALUES (1, \"Ororo Munroe\", \"1940-05-30\");\n",
+    "\n",
+    "INSERT INTO friends(id, name, birthday)\n",
+    "VALUES (2, \"XZ KTO\", \"1986-05-16\");\n",
+    "\n",
+    "INSERT INTO friends(id, name, birthday)\n",
+    "VALUES (3, \"YAYA KTO\", \"1986-05-20\");\n",
+    "\n",
+    "UPDATE friends\n",
+    "SET name = \"Storm\"\n",
+    "WHERE id == 1;\n",
+    "\n",
+    "ALTER TABLE friends\n",
+    "ADD COLUMN email TEXT;\n",
+    "\n",
+    "UPDATE friends\n",
+    "SET email = \"storm@codecademy.com\"\n",
+    "WHERE id = 1;\n",
+    "\n",
+    "DELETE FROM friends\n",
+    "WHERE id = 1;\n",
+    "\n",
+    "\n",
+    "SELECT * FROM friends"
+   ]
   },
   {
    "cell_type": "code",
