--- a/CodeAcademy.ipynb
+++ b/CodeAcademy.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d6d1a53",
+   "id": "48538a5f",
    "metadata": {},
    "source": [
     "Create a Table\n",
@@ -255,12 +255,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22cee569",
+   "cell_type": "markdown",
+   "id": "339dc09a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "WHAT CAN I DO WITH A DATABASE?\n",
+    "New York Restaurantsm"
+   ]
   },
   {
    "cell_type": "code",
@@ -268,6 +269,45 @@
    "id": "d2f7b519",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "SELECT NAME,\n",
+    "CASE\n",
+    "  WHEN review > 4.5 THEN \"Extraordinary\"\n",
+    "  WHEN review > 4 THEN \"Excellent\"\n",
+    "  WHEN review > 3 THEN \"Good\"\n",
+    "  WHEN review > 2 THEN \"FAIR\"\n",
+    "  ELSE \"Poor\"\n",
+    "END AS \"review\"\n",
+    "FROM nomnom;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6dd3069",
+   "metadata": {},
+   "source": [
+    "WHAT CAN I DO WITH A DATABASE?\n",
+    "How to Hack Hacker News"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21dc3ade",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SELECT strftime(\"%H\", timestamp) as \"HOUR\", ROUND(AVG(SCORE), 2) AS \"SCORE\", COUNT(*) AS \"NUMBER OF STORIES\"\n",
+    "FROM hacker_news\n",
+    "WHERE timestamp IS NOT NULL\n",
+    "GROUP BY 1\n",
+    "ORDER BY 1;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5397e182",
+   "metadata": {},
    "source": []
   }
  ],
