--- a/stratascratch.com.ipynb
+++ b/stratascratch.com.ipynb
@@ -11,10 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d71b3249",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (900552410.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/bg/b5dfn0gj1lz88k7ms283yrlm0000gn/T/ipykernel_20993/900552410.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    ABS(MAX(CASE WHEN department = 'marketing' THEN salary ELSE null END) -\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "SELECT \n",
     "    ABS(MAX(CASE WHEN department = 'marketing' THEN salary ELSE null END) - \n",
@@ -36,19 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "60832fad",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1335227553.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/bg/b5dfn0gj1lz88k7ms283yrlm0000gn/T/ipykernel_4197/1335227553.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    select city, property_type, AVG(bathrooms), AVG(bedrooms)\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "select city, property_type, AVG(bathrooms), AVG(bedrooms) \n",
     "from airbnb_search_details\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "056ea4fa",
+   "id": "abf55e2c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc4fb0f9",
+   "id": "5a87aa96",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aa4b898",
+   "id": "b8164a61",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72ca7270",
+   "id": "3382dc72",
    "metadata": {},
    "outputs": [],
    "source": []
