--- a/SeriousSQL.ipynb
+++ b/SeriousSQL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b02da30c",
+   "id": "06604446",
    "metadata": {},
    "source": [
     "## 1) Markdown practice"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6af901e",
+   "id": "b93efb4e",
    "metadata": {},
    "source": [
     "### 2.2.1. This is a level 3 heading\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b1418db",
+   "id": "b6d6abd9",
    "metadata": {},
    "source": [
     "## 2) SELECT, ORDER BY practice"
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97d7826d",
+   "id": "e4dc4940",
    "metadata": {},
    "source": [
     "What is the name of the category with the highest category_id in the dvd_rentals.category table?"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82ac882a",
+   "id": "18f1aa79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6329b6a",
+   "id": "bce69872",
    "metadata": {},
    "source": [
     "For the films with the longest length, what is the title of the “R” rated film with the lowest replacement_cost in dvd_rentals.film table?"
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95984d73",
+   "id": "d4d9131f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b637e7f",
+   "id": "c247c791",
    "metadata": {},
    "source": [
     "Who was the manager of the store with the highest total_sales in the dvd_rentals.sales_by_store table?"
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d80c8004",
+   "id": "077e4d82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "410fb171",
+   "id": "187e3276",
    "metadata": {},
    "source": [
     "What is the postal_code of the city with the 5th highest city_id in the dvd_rentals.address table?"
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71076760",
+   "id": "253eb38e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,14 +160,231 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65101ea8",
+   "id": "671e2a16",
+   "metadata": {},
+   "source": [
+    "## 3) Record Counts & Distinct Values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a26c6903",
+   "metadata": {},
+   "source": [
+    "Which actor_id has the most number of unique film_id records in the dvd_rentals.film_actor table?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bfdfd68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SELECT\n",
+    "  actor_id,\n",
+    "  COUNT(*) AS frequency\n",
+    "FROM dvd_rentals.film_actor\n",
+    "GROUP BY actor_id\n",
+    "ORDER BY frequency DESC\n",
+    "LIMIT 5;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2857344",
+   "metadata": {},
+   "source": [
+    "How many distinct fid values are there for the 3rd most common price value in the dvd_rentals.nicer_but_slower_film_list table?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "937a8cd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SELECT\n",
+    "  price,\n",
+    "  COUNT(DISTINCT(fid)) AS frequency\n",
+    "FROM dvd_rentals.nicer_but_slower_film_list\n",
+    "GROUP BY price\n",
+    "ORDER BY frequency DESC\n",
+    "LIMIT 5\n",
+    "OFFSET 2;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdf1d52f",
+   "metadata": {},
+   "source": [
+    "How many unique country_id values exist in the dvd_rentals.city table?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b65c2db3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SELECT\n",
+    "  COUNT(DISTINCT(country_id)) AS unique_country_id\n",
+    "FROM dvd_rentals.city\n",
+    ";"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a77c1db0",
+   "metadata": {},
+   "source": [
+    "What percentage of overall total_sales does the Sports category make up in the dvd_rentals.sales_by_film_category table?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e50a2faf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SELECT \n",
+    "category,\n",
+    "ROUND(100*total_sales::numeric/SUM(total_sales) OVER (), 2) AS percentage\n",
+    "FROM dvd_rentals.sales_by_film_category;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d83637a2",
+   "metadata": {},
+   "source": [
+    "What percentage of unique fid values are in the Children category in the dvd_rentals.film_list table?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c06011dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SELECT \n",
+    "  category,\n",
+    "  ROUND(100 * COUNT(DISTINCT fid)::NUMERIC/SUM(COUNT(fid)) OVER(), 2) AS percentage\n",
+    "FROM dvd_rentals.film_list\n",
+    "GROUP BY category;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0e70c03",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4aa61e6d",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0dcb49d",
+   "id": "99170719",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79d3b2de",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d967db5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c5e33d7",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db9c5bd9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdeea3c0",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27d9b82c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4fae860",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6be5595f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63ff0f06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7df79d69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b891b08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f99e6e24",
    "metadata": {},
    "outputs": [],
    "source": []
